--- a/Views/Subject/Create.cshtml
+++ b/Views/Subject/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model TeacherManagementSystem.Models.Subject;
+﻿@model TeacherManagementSystem.Models.Subject
 @{
         ViewData["Title"] = "Add New Subject";
 }
@@ -11,7 +11,7 @@
             <form asp-action="Create" method="post">
                 <div class="mb-3">
                     <label class="form-label">subject Name</label>
-                    <input type="text" class="form-control" asp-for="Name" placeholder="Enter Subject Name" required/>
+                    <input type="text" class="form-control" asp-for="Name" placeholder="Enter Subject Name" required />
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Code</label>
