--- a/Views/Subject/Edit.cshtml
+++ b/Views/Subject/Edit.cshtml
@@ -16,7 +16,7 @@
 
             <form asp-action="Edit" method="post">
 
-                <input type="hidden" asp-for="Id" />
+                <input type="hidden" name="Id" value="@Model.Id" />
 
                 <div class="mb-3">
                     <label class="form-label">Subject Name</label>
