--- a/Views/Subject/_SubjectForm.cshtml
+++ b/Views/Subject/_SubjectForm.cshtml
@@ -5,6 +5,7 @@
     <input type="text"
         class="form-control"
         id="subjectName"
+        name="Name"
         value="@Model?.Name"
         placeholder="Enter Subject Name" />
 </div>
@@ -13,6 +14,7 @@
     <input type="number"
         class="form-control"
         id="subjectCode"
+        name="Code"
         value="@Model?.Code"
         placeholder="Enter the Subject Code" />
 </div>
