--- a/Views/Subject/_SubjectTable.cshtml
+++ b/Views/Subject/_SubjectTable.cshtml
@@ -24,12 +24,12 @@
                     <td>@item.Name</td>
                     <td>@item.Code</td>
                     <td>
-                        <button class="btn btn-warning btn-sm btn-edit"
+                        <button class="btn btn-warning btn-sm btn-subject-edit"
                                 data-id="@item.Id">
                             Edit
                         </button>
 
-                        <button class="btn btn-danger btn-sm btn-delete"
+                        <button class="btn btn-danger btn-sm btn-subject-delete"
                                 data-id="@item.Id">
                             Delete
                         </button>
