--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="container mt-4">
+﻿<h1>Dashboard</h1>
+<div class="container mt-4">
     <button class="btn btn-primary" onclick="loadsubjectsPage()">Subject Module</button>
     <button class="btn btn-success" onclick="loadTeachersPage()">Teacher Module</button>
     <hr />
