Add delete functionality when subject is already assign to one or more teacher

--- a/Views/Subject/Index.cshtml
+++ b/Views/Subject/Index.cshtml
@@ -133,6 +133,9 @@
             data: { id: id },
             success: function () {
                 loadSubjects();
+            },
+            error:function(xhr){
+                alert(xhr.responseText);
             }
         });
     });
