--- a/Views/Subject/_SubjectForm.cshtml
+++ b/Views/Subject/_SubjectForm.cshtml
@@ -1,4 +1,4 @@
-﻿@model TeacherManagementSystem.Models.Subject
+﻿@* @model TeacherManagementSystem.Models.Subject
 <input type="hidden" id="subjectId" value="@Model?.Id" />
 <div class="mb-3">
     <label class="form-label">Subject Name</label>
@@ -17,4 +17,4 @@
         name="Code"
         value="@Model?.Code"
         placeholder="Enter the Subject Code" />
-</div>
+</div> *@
