--- a/Views/Subject/_SubjectTable.cshtml
+++ b/Views/Subject/_SubjectTable.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<TeacherManagementSystem.Models.Subject>
+﻿@* @model List<TeacherManagementSystem.Models.Subject> *@
 <table class="table table-striped table-hover">
     <thead class="table-dark">
         <tr>
