--- a/Views/Teacher/_TeacherForm.cshtml
+++ b/Views/Teacher/_TeacherForm.cshtml
@@ -1,4 +1,4 @@
-﻿@model TeacherManagementSystem.Models.Teacher
+﻿@* @model TeacherManagementSystem.Models.Teacher
 <form id="teacherForm">
 <input type="hidden" name="Id" id="hiddenTeacherId" value="@Model.Id" />
     <input type="hidden" id="hiddenSubjectId" value="@Model.SubjectId" />
@@ -16,4 +16,4 @@
     </select>
 </div>
     <button type="button" id="btnSaveTeacher" class="btn btn-success">Save</button>
-</form>
+</form> *@
