--- a/Views/Subject/_EditSubjectForm.cshtml
+++ b/Views/Subject/_EditSubjectForm.cshtml
@@ -5,7 +5,7 @@
     <input type="text"
            class="form-control"
            id="subjectName"
-           value="@Model.Name"
+           value="@Model.Names"
            placeholder="Enter Subject Name" />
 </div>
 
