--- a/Views/Subject/_SubjectTable.cshtml
+++ b/Views/Subject/_SubjectTable.cshtml
@@ -1,4 +1,4 @@
-﻿@* @model List<TeacherManagementSystem.Models.Subject> *@
+﻿
 <table class="table table-striped table-hover">
     <thead class="table-dark">
         <tr>
@@ -21,7 +21,7 @@
             {
                 <tr>
                     <td>@item.Id</td>
-                    <td>@item.Name</td>
+                    <td>@item.Names</td>
                     <td>@item.Code</td>
                     <td>
                         <button class="btn btn-warning btn-sm btn-subject-edit"
