--- a/Views/Teacher/_CreateTeacherForm.cshtml
+++ b/Views/Teacher/_CreateTeacherForm.cshtml
@@ -24,3 +24,8 @@
         id="btnSaveTeacher">
     Save Teacher
 </button>
+<button type="button"
+        class="btn btn-secondary"
+        data-bs-dismiss="modal">
+    Cancel
+</button>
